[package]
name = "rweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2" }
derive_more = "0.99"
env_logger = "0.10"
log = "0.4"
redis = { version = "0.24", features = ["tokio-comp", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tracing-subscriber = "0.3"
