[package]
name = "rweb"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8" }
derive_more = { version = "2.1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
redis = { version = "1.0", features = ["tokio-comp","json", "aio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "postgres",
    "macros",
] }
reqwest = { version = "0.13", features = ["json"] }
bytes = { version = "1", features = ["serde"] }
prost = "0.14"
prost-types = "0.14"
tokio-tungstenite = "*"


[build-dependencies]
prost-build = "0.14"
